--- a/templates/_partials/menu.html.twig
+++ b/templates/_partials/menu.html.twig
@@ -1,7 +1,7 @@
 {% set route_name = app.request.attributes.get('_route') %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#">
-        <img src="{{ asset('static/images/logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="{{ asset('build/images/logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
