--- a/templates/beers/index.html.twig
+++ b/templates/beers/index.html.twig
@@ -9,10 +9,12 @@
             <div class="col-9">
                 <h1>{{title}}</h1>
                 <div class="card" style="width: 30rem;">
-                    {% for beer in beers.beers %}
+                    {% for beer in beers %}
                         <div class="card-body">
+                            <a href="{{ path('beer_page', { 'id' : beer.id }) }}">
                             <h5 class="card-title">{{ beer.name }}</h5>
                             <p class="card-text">{{ beer.degree }}</p>
+                            </a>
                         </div>
                     {% endfor %}
                 </div>
