--- a/templates/_partials/menu.html.twig
+++ b/templates/_partials/menu.html.twig
@@ -1,6 +1,6 @@
 {% set route_name = app.request.attributes.get('_route') %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{{ path('home') }}">
         <img src="{{ asset('build/images/logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link {% if route_name == "bar" %}active{% endif %}" href="{{ path('bar') }}">bar <span class="sr-only">(current)</span></a>
+                <a class="nav-link {% if route_name == "home" %}active{% endif %}" href="{{ path('home') }}">bar <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link {% if route_name == "beers" %}active{% endif %}" href="{{ path('beers') }}">Beers</a>
