--- a/templates/beers/index.html.twig
+++ b/templates/beers/index.html.twig
@@ -8,14 +8,16 @@
             <div class="col-3">Sidebar</div>
             <div class="col-9">
                 <h1>{{title}}</h1>
-                <div class="card" style="width: 30rem;">
+                <div class="card-group mb-5">
                     {% for beer in beers %}
+                    <div class="card mb-5">
                         <div class="card-body">
-                            <a href="{{ path('beer_page', { 'id' : beer.id }) }}">
-                            <h5 class="card-title">{{ beer.name }}</h5>
-                            <p class="card-text">{{ beer.degree }}</p>
-                            </a>
+                            <h5 class="card-title">{{ beer.name }} | {{ beer.degree }}</h5>
+                            <p class="card-text">{{ beer.description }}</p>
+                            <p class="card-text"><small class="text-muted">Last updated {{ beer.getPublishedAt()|date('Y-m-d') }}</small></p>
+                            <a href="{{ path('beer_page', { 'id' : beer.id }) }}" class="btn btn-primary card-link">Card link</a>
                         </div>
+                    </div>
                     {% endfor %}
                 </div>
             </div>
