--- a/templates/_partials/menu.html.twig
+++ b/templates/_partials/menu.html.twig
@@ -1,4 +1,3 @@
-{% set route_name = app.request.attributes.get('_route') %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="{{ path('home') }}">
         <img src="{{ asset('build/images/logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -9,11 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link {% if route_name == "home" %}active{% endif %}" href="{{ path('home') }}">bar <span class="sr-only">(current)</span></a>
+                <a class="nav-link {% if routeName == "home" %}active{% endif %}" href="{{ path('home') }}">bar <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link {% if route_name == "beers" %}active{% endif %}" href="{{ path('beers') }}">Beers</a>
-            </li>
+            {% for category in categories %}
+                <li class="nav-item">
+                    <a class="nav-link {% if category.id == category_id %}active{% endif %} " href="{{ path('category',{ id: category.id }) }}">{{ category.name }}</a>
+                </li>
+            {% endfor %}
         </ul>
     </div>
 </nav>
