--- a/templates/_partials/menu.html.twig
+++ b/templates/_partials/menu.html.twig
@@ -1,20 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-white">
     <a class="navbar-brand" href="{{ path('home') }}">
-        <img src="{{ asset('build/images/logo.png') }}" width="30" height="30" class="d-inline-block align-top" alt="">
+        <img src="{{ asset('build/images/logo.png') }}" class="d-inline-block align-top" style=" width: 40px;height: 40px;transform: rotate(346deg);" alt="">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav text-uppercase">
             <li class="nav-item">
-                <a class="nav-link {% if routeName == "home" %}active{% endif %}" href="{{ path('home') }}">bar <span class="sr-only">(current)</span></a>
+                <a class="nav-link text-primary {% if routeName == "home" %}active font-weight-bold{% endif %}" href="{{ path('home') }}">Home <span class="sr-only">(current)</span></a>
             </li>
             {% for category in categories %}
                 <li class="nav-item">
-                    <a class="nav-link {% if category.id == category_id %}active{% endif %} " href="{{ path('category',{ id: category.id }) }}">{{ category.name }}</a>
+                    <a class="nav-link text-primary {% if category.id == category_id %}active font-weight-bold{% endif %} " href="{{ path('category',{ id: category.id }) }}">{{ category.name }}</a>
                 </li>
             {% endfor %}
+            <li class="nav-item">
+                <a class="nav-link text-primary {% if routeName == "mentions" %}active font-weight-bold{% endif %}" href="{{ path('mentions') }}">mentions</a>
+            </li>
         </ul>
     </div>
 </nav>
