--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,16 @@
             'routeName' : app.request.attributes.get('_route'),
             'category_id' : app.request.attributes.get('id') ?? ''
         }))}}
-        {% block body %}{% endblock %}
+        <div class="container">
+            <div class="row">
+                {% if app.request.attributes.get('_route') == "beers" or
+                    app.request.attributes.get('_route') == "category"%}
+                    <div class="col-3">
+                        {% include '_partials/sidebar.html.twig' %}
+                    </div>
+                {% endif %}
+                {% block body %}{% endblock %}
+            </div>
+        </div>
     </body>
 </html>
