feat(menu): add page statistic

--- a/templates/_partials/menu.html.twig
+++ b/templates/_partials/menu.html.twig
@@ -18,6 +18,9 @@
             <li class="nav-item">
                 <a class="nav-link text-primary {% if routeName == "mentions" %}active font-weight-bold{% endif %}" href="{{ path('mentions') }}">mentions</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-primary {% if routeName == "statistic" %}active font-weight-bold{% endif %}" href="{{ path('statistic') }}">statistic</a>
+            </li>
         </ul>
     </div>
 </nav>
