--- a/templates/mention/index.html.twig
+++ b/templates/mention/index.html.twig
@@ -8,7 +8,9 @@
         <div class="card" style="width: 30rem;">
             <div class="card-body">
                 <h5 class="card-title">Mentions</h5>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Ad asperiores culpa delectus, iste iusto omnis placeat tempore! Cumque explicabo facere facilis harum praesentium rerum voluptatum.
+                    Aliquid sint suscipit unde voluptatibus.</p>
             </div>
         </div>
     </div>
