--- a/templates/bar/index.html.twig
+++ b/templates/bar/index.html.twig
@@ -8,26 +8,16 @@
             <div class="col-12">
                 <h3 class="mb-4">{{title}}</h3>
             </div>
-            <div class="col-lg-6">
-                <div class="card text-white mb-5">
-                    <i class=" waves-effect waves-light"><img class="card-img" src="https://responsivemart.com/wp-content/uploads/overlay-1.jpg" alt="Card image"></i>
-                    <div class="card-img-overlay waves-effect waves-light">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
+            {% for beer in lastBeers %}
+                <div class="card mb-5">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ beer.name }} | {{ beer.degree }}</h5>
+                        <p class="card-text">{{ beer.description }}</p>
+                        <p class="card-text"><small class="text-muted">Last updated {{ beer.getPublishedAt()|date('Y-m-d') }}</small></p>
+                        <a href="{{ path('beer_page', { 'id' : beer.id }) }}" class="btn btn-primary card-link">Card link</a>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="card text-white mb-5">
-                    <i class=" waves-effect waves-light"><img class="card-img" src="https://responsivemart.com/wp-content/uploads/overlay-2.jpg" alt="Card image"></i>
-                    <div class="card-img-overlay waves-effect waves-light">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text">Last updated 3 mins ago</p>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
