--- a/templates/mention/index.html.twig
+++ b/templates/mention/index.html.twig
@@ -3,11 +3,12 @@
 {% block title %}{{title}}{% endblock %}
 
 {% block body %}
-    <div class="col-9">
-        <h1>{{title}}</h1>
-        <div class="card" style="width: 30rem;">
+    <div class="card">
+        <div class="card-header">
+            <h1>{{ title }}</h1>
+        </div>
+        <div class="card">
             <div class="card-body">
-                <h5 class="card-title">Mentions</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Ad asperiores culpa delectus, iste iusto omnis placeat tempore! Cumque explicabo facere facilis harum praesentium rerum voluptatum.
                     Aliquid sint suscipit unde voluptatibus.</p>
