--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -3,19 +3,20 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-    <div class="col-9">
-        <h1>{{title}}</h1>
-        <div class="card mb-5">
+    <div class="card">
+        <div class="card-header">
+            <h1>Bières {{ category.name }}</h1>
+        </div>
+        <div class="card">
             <div class="card-body">
-                <h5 class="card-title">{{ category.name }}</h5>
                 <p class="card-text">{{ category.description }}</p>
                 {% for beer in beers %}
-                    <div class="card mb-1">
+                    <div class="card mb-3">
                         <div class="card-body">
                             <h5 class="card-title">{{ beer.name }} | {{ beer.degree }}</h5>
                             <p class="card-text">{{ beer.description }}</p>
-                            <p class="card-text"><small class="text-muted">Last updated {{ beer.getPublishedAt()|date('Y-m-d') }}</small></p>
-                            <a href="{{ path('beer_page', { 'id' : beer.id }) }}" class="btn btn-primary card-link">Card link</a>
+                            <p class="card-text"><small class="text-muted">Mise en ligne le {{ beer.getPublishedAt()|date('d/m/Y') }}</small></p>
+                            <a href="{{ path('beer_page', { 'id' : beer.id }) }}" class="btn btn-primary card-link">Voir plus</a>
                         </div>
                     </div>
                 {% endfor %}
