chore(app): init tp

--- a/templates/_partials/menu.html.twig
+++ b/templates/_partials/menu.html.twig
@@ -21,6 +21,9 @@
             <li class="nav-item">
                 <a class="nav-link text-primary {% if routeName == "statistic" %}active font-weight-bold{% endif %}" href="{{ path('statistic') }}">statistic</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-primary {% if routeName == "showservice" %}active font-weight-bold{% endif %}" href="{{ path('showservice') }}">showService</a>
+            </li>
         </ul>
     </div>
 </nav>
