--- a/templates/statistic/index.html.twig
+++ b/templates/statistic/index.html.twig
@@ -25,7 +25,7 @@
                 {% for client in clients %}
                 <div class="card text-dark mb-5">
                     <div class="card-img-overlay waves-effect waves-light">
-                        <p class="card-text">{{client.name}}, age {{client.age}} ans, nombre de bière acheté : {{client.numberBeer}} </p>
+                        <p class="card-text">{{client.name}}, age {index.html.twig{client.age}} ans, nombre de bière acheté : {{client.numberBeer}} </p>
                     </div>
                 </div>
                 {% endfor %}
