--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
         {% endblock %}
 
         {% block javascripts %}
-            {{ encore_entry_script_tags('styles') }}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
