feat(form) : add new form quote

--- a/templates/quote/index.html.twig
+++ b/templates/quote/index.html.twig
@@ -8,6 +8,7 @@
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
+    {#  <button class="btn">{{ button_label|default('Save') }}</button>#}
     {{ form_end(form) }}
 
     <a href="{{ path('quotes') }}">back to list</a>
