--- a/templates/quote/index.html.twig
+++ b/templates/quote/index.html.twig
@@ -4,12 +4,17 @@
 {% endblock %}
 
 {% block body %}
-    <h1>Create new Quote</h1>
+    <div class="col-9">
+        <h1>Create new Quote</h1>
+        <div class="card mb-5">
+            <div class="card-body">
+                <h5 class="card-title">form</h5>
+                {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+                    {{ form_widget(form) }}
+                    {{ form_end(form) }}
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {#  <button class="btn">{{ button_label|default('Save') }}</button>#}
-    {{ form_end(form) }}
-
-    <a href="{{ path('quotes') }}">back to list</a>
+                <a href="{{ path('quotes') }}">back to list</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
