--- a/templates/quotes/index.html.twig
+++ b/templates/quotes/index.html.twig
@@ -10,6 +10,11 @@
                     <div class="card-body">
                         <h2 class="medium">{{quote['title']}}</h2>
                         {{ quote['content'] | raw }}
+                        <form method="post" action="{{ path('quote_delete', {'id': quote.id}) }}"
+                              onsubmit="return confirm('Are you sure you want to delete this item?');">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ quote.id) }}">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
                     </div>
                 </div>
             </div>
