feat(app): add crud form quote

--- a/templates/quote/index.html.twig
+++ b/templates/quote/index.html.twig
@@ -1,20 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Quote
-{% endblock %}
+{% block title %}Quote index{% endblock %}
 
 {% block body %}
-    <div class="col-9">
-        <h1>Create new Quote</h1>
-        <div class="card mb-5">
-            <div class="card-body">
-                <h5 class="card-title">form</h5>
-                {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
-                    {{ form_widget(form) }}
-                    {{ form_end(form) }}
+    <h1>Quote index</h1>
 
-                <a href="{{ path('quotes') }}">back to list</a>
-            </div>
-        </div>
-    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Title</th>
+                <th>Content</th>
+                <th>Position</th>
+                <th>Created_at</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for quote in quotes %}
+            <tr>
+                <td>{{ quote.id }}</td>
+                <td>{{ quote.title }}</td>
+                <td>{{ quote.content }}</td>
+                <td>{{ quote.position }}</td>
+                <td>{{ quote.createdAt ? quote.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+                <td>
+                    <a href="{{ path('quote_show', {'id': quote.id}) }}">show</a>
+                    <a href="{{ path('quote_edit', {'id': quote.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="6">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+
+    <a href="{{ path('quote_new') }}">Create new</a>
 {% endblock %}
