fix(migration): clean migrations versions errors

--- a/templates/quote/edit.html.twig
+++ b/templates/quote/edit.html.twig
@@ -3,9 +3,16 @@
 {% block title %}Edit Quote{% endblock %}
 
 {% block body %}
-    <div class="col-9">
+    <nav class="col-12" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">
+                <a href="{{ path('quotes') }}">Back To List</a>
+                <li class="breadcrumb-item active" aria-current="page">Quote</li>
+            </li>
+        </ol>
+    </nav>
+    <div class="col-12">
         <h1>Create new Quote</h1>
-        <a href="{{ path('quotes') }}">back to list</a>
         <div class="card mb-5">
             <div class="card-body">
                 <h5 class="card-title">form</h5>
