--- a/templates/quote/new.html.twig
+++ b/templates/quote/new.html.twig
@@ -4,13 +4,23 @@
 {% endblock %}
 
 {% block body %}
-    <div class="col-9">
-        <h1>Create new Quote</h1>
-        <div class="card mb-5">
-            <div class="card-body">
-                <h5 class="card-title">form</h5>
-                {{ include('quote/_form.html.twig',{'button_label': 'create new','button_type': 'primary'}) }}
-                <a href="{{ path('quotes') }}">back to list</a>
+    <nav class="col-12" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">
+                <a href="{{ path('quotes') }}">Back To List</a>
+            <li class="breadcrumb-item active" aria-current="page">Quote</li>
+            </li>
+        </ol>
+    </nav>
+    <div class="row">
+        <div class="col-12">
+            <h1>Create new Quote</h1>
+            <div class="card mb-5">
+                <div class="card-body">
+                    <h5 class="card-title">form</h5>
+                    {{ include('quote/_form.html.twig',{'button_label': 'create new','button_type': 'primary'}) }}
+                    <a href="{{ path('quotes') }}">back to list</a>
+                </div>
             </div>
         </div>
     </div>
