--- a/templates/quote/show.html.twig
+++ b/templates/quote/show.html.twig
@@ -3,18 +3,23 @@
 {% block title %}Quote{% endblock %}
 
 {% block body %}
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="card card__beers">
-                <div class="card-body">
-                    <h2 class="medium">{{quote['title']}}</h2>
-                    {{ quote['content'] | raw }}
+    <nav class="col-12" aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">
+                <a href="{{ path('quotes') }}">Back To List</a>
+            <li class="breadcrumb-item active" aria-current="page">Quote</li>
+            </li>
+        </ol>
+    </nav>
+    <div class="col-sm-12">
+        <div class="card card__beers">
+            <div class="card-body">
+                <h2 class="medium">{{quote['title']}}</h2>
+                {{ quote['content'] | raw }}
 
-                    <a class="btn btn-info" href="{{ path('quote_edit', {'id': quote.id}) }}">edit</a>
-                    {{ include('quote/_delete_form.html.twig') }}
-                </div>
+                <a class="btn btn-info" href="{{ path('quote_edit', {'id': quote.id}) }}">edit</a>
+                {{ include('quote/_delete_form.html.twig') }}
             </div>
-            <a href="{{ path('quotes') }}">back to list</a>
         </div>
     </div>
 {% endblock %}
