fix(app): color menu

--- a/templates/_partials/menu.html.twig
+++ b/templates/_partials/menu.html.twig
@@ -25,10 +25,10 @@
                 <a class="nav-link text-primary {% if routeName == "showservice" %}active font-weight-bold{% endif %}" href="{{ path('showservice') }}">showService</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if routeName == "quotes" %} active {% endif %}" href="{{ path('quotes') }}">Quotes</a>
+                <a class="nav-link text-primary {% if routeName == "quotes" %} active {% endif %}" href="{{ path('quotes') }}">Quotes</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if routeName == "quote_new" %} active {% endif %}" href="{{ path('quote_new') }}">Add quote</a>
+                <a class="nav-link text-primary {% if routeName == "quote_new" %} active {% endif %}" href="{{ path('quote_new') }}">Add quote</a>
             </li>
         </ul>
     </div>
