fix(assert): add validate

--- a/templates/quote/edit.html.twig
+++ b/templates/quote/edit.html.twig
@@ -12,7 +12,7 @@
         </ol>
     </nav>
     <div class="col-12">
-        <h1>Create new Quote</h1>
+        <h1>edit Quote</h1>
         <div class="card mb-5">
             <div class="card-body">
                 <h5 class="card-title">form</h5>
