--- a/templates/quote/_form.html.twig
+++ b/templates/quote/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
     {{ form_widget(form) }}
-    <button class="btn btn-{{ button_type|default('primary') }}">{{ button_label|default('Save') }}</button>
+    <input type="submit" class="btn btn-{{ button_type|default('primary') }}" value="{{ button_label|default('Save') }}">
 {{ form_end(form) }}
