--- a/templates/quote/show.html.twig
+++ b/templates/quote/show.html.twig
@@ -17,8 +17,14 @@
                 <h2 class="medium">{{quote['title']}}</h2>
                 {{ quote['content'] | raw }}
 
-                <a class="btn btn-info" href="{{ path('quote_edit', {'id': quote.id}) }}">edit</a>
-                {{ include('quote/_delete_form.html.twig') }}
+                <div class="row">
+                    <div class="col-1">
+                        <a class="btn btn-info" href="{{ path('quote_edit', {'id': quote.id}) }}">edit</a>
+                    </div>
+                    <div class="col-1">
+                        {{ include('quote/_delete_form.html.twig') }}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
